fix pin it button bug and rotator circles not showing up

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1026,7 +1026,7 @@ body.firefox.win #rotate-help .border-notch {
 }
 .share-facebook,
 .share-twitter,
-.share-pinterest {
+.view .share-pinterest {
   position: relative;
   display: inline-block;
   margin: 0 0 0 5px;
